// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Public API smoke tests renders AwesomeButton with before/after slots 1`] = `
<button
  className="aws-btn aws-btn--auto aws-btn--primary aws-btn--visible"
  disabled={false}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseEnter={[Function]}
  onPointerCancel={[Function]}
  onPointerDown={[Function]}
  onPointerLeave={[Function]}
  onPointerMove={[Function]}
  onPointerUp={[Function]}
  style={{}}
  type="button"
>
  <span
    className="aws-btn__wrapper"
  >
    <span
      className="aws-btn__content"
    >
      <span
        aria-hidden="true"
      >
        ←
      </span>
      <span
        className="aws-btn__label"
      >
        Continue
      </span>
      <span
        aria-hidden="true"
      >
        →
      </span>
    </span>
  </span>
</button>
`;

exports[`Public API smoke tests renders AwesomeButton without crashing 1`] = `
<button
  aria-disabled={true}
  className="aws-btn aws-btn--auto aws-btn--primary aws-btn--visible aws-btn--placeholder aws-btn--disabled"
  disabled={true}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseEnter={[Function]}
  onPointerCancel={[Function]}
  onPointerDown={[Function]}
  onPointerLeave={[Function]}
  onPointerMove={[Function]}
  onPointerUp={[Function]}
  style={{}}
  type="button"
>
  <span
    className="aws-btn__wrapper"
  >
    <span
      className="aws-btn__content"
    >
      <span
        className="aws-btn__label"
      />
    </span>
  </span>
</button>
`;

exports[`Public API smoke tests renders AwesomeButtonProgress without crashing 1`] = `
<button
  className="aws-btn aws-btn--auto aws-btn--visible aws-btn--progress"
  disabled={false}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseEnter={[Function]}
  onPointerCancel={[Function]}
  onPointerDown={[Function]}
  onPointerLeave={[Function]}
  onPointerMove={[Function]}
  onPointerUp={[Function]}
  style={{}}
  type="button"
>
  <span
    className="aws-btn__wrapper"
  >
    <span
      className="aws-btn__content"
    >
      <span
        className="aws-btn__label"
      >
        <span />
      </span>
    </span>
    <span>
      <span
        className="aws-btn__progress"
        data-loading="Wait.."
        data-status="Success!"
      />
    </span>
  </span>
</button>
`;

exports[`Public API smoke tests renders AwesomeButtonSocial with sharer props 1`] = `
<button
  className="aws-btn aws-btn--auto aws-btn--github aws-btn--visible"
  disabled={false}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseEnter={[Function]}
  onPointerCancel={[Function]}
  onPointerDown={[Function]}
  onPointerLeave={[Function]}
  onPointerMove={[Function]}
  onPointerUp={[Function]}
  style={{}}
  type="button"
>
  <span
    className="aws-btn__wrapper"
  >
    <span
      className="aws-btn__content"
    >
      <span
        className="aws-btn__label"
      >
        GitHub
      </span>
    </span>
  </span>
</button>
`;

exports[`Public API smoke tests renders AwesomeButtonSocial without crashing 1`] = `
<button
  aria-disabled={true}
  className="aws-btn aws-btn--auto aws-btn--primary aws-btn--visible aws-btn--placeholder aws-btn--disabled"
  disabled={true}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseEnter={[Function]}
  onPointerCancel={[Function]}
  onPointerDown={[Function]}
  onPointerLeave={[Function]}
  onPointerMove={[Function]}
  onPointerUp={[Function]}
  style={{}}
  type="button"
>
  <span
    className="aws-btn__wrapper"
  >
    <span
      className="aws-btn__content"
    >
      <span
        className="aws-btn__label"
      />
    </span>
  </span>
</button>
`;

exports[`Public API smoke tests renders a button without moveEvents 1`] = `
<button
  className="aws-btn aws-btn--auto aws-btn--primary aws-btn--visible"
  disabled={false}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseEnter={[Function]}
  onPointerCancel={[Function]}
  onPointerDown={[Function]}
  onPointerLeave={[Function]}
  onPointerMove={[Function]}
  onPointerUp={[Function]}
  style={{}}
  type="button"
>
  <span
    className="aws-btn__wrapper"
  >
    <span
      className="aws-btn__content"
    >
      <span
        className="aws-btn__label"
      >
        Button
      </span>
    </span>
  </span>
</button>
`;

exports[`Public API smoke tests renders a primary button 1`] = `
<button
  className="aws-btn aws-btn--auto aws-btn--primary aws-btn--visible"
  disabled={false}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseEnter={[Function]}
  onPointerCancel={[Function]}
  onPointerDown={[Function]}
  onPointerLeave={[Function]}
  onPointerMove={[Function]}
  onPointerUp={[Function]}
  style={{}}
  type="button"
>
  <span
    className="aws-btn__wrapper"
  >
    <span
      className="aws-btn__content"
    >
      <span
        className="aws-btn__label"
      >
        Button
      </span>
    </span>
  </span>
</button>
`;

exports[`Public API smoke tests renders a progress button with explicit success completion 1`] = `
<button
  className="aws-btn aws-btn--auto aws-btn--visible aws-btn--progress"
  disabled={false}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseEnter={[Function]}
  onPointerCancel={[Function]}
  onPointerDown={[Function]}
  onPointerLeave={[Function]}
  onPointerMove={[Function]}
  onPointerUp={[Function]}
  style={{}}
  type="button"
>
  <span
    className="aws-btn__wrapper"
  >
    <span
      className="aws-btn__content"
    >
      <span
        className="aws-btn__label"
      >
        <span>
          Button
        </span>
      </span>
    </span>
    <span>
      <span
        className="aws-btn__progress"
        data-loading="Wait.."
        data-status="Success!"
      />
    </span>
  </span>
</button>
`;

exports[`Public API smoke tests renders a secondary button 1`] = `
<button
  className="aws-btn aws-btn--auto aws-btn--secondary aws-btn--visible"
  disabled={false}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseEnter={[Function]}
  onPointerCancel={[Function]}
  onPointerDown={[Function]}
  onPointerLeave={[Function]}
  onPointerMove={[Function]}
  onPointerUp={[Function]}
  style={{}}
  type="button"
>
  <span
    className="aws-btn__wrapper"
  >
    <span
      className="aws-btn__content"
    >
      <span
        className="aws-btn__label"
      >
        Button
      </span>
    </span>
  </span>
</button>
`;
